# cex

./: .gitignore  Cargo.toml
binance/: Cargo.toml
binance/examples/: bandtastic.rs  bandtastic_runner.rs  kline.rs  sub.toml
binance/src/: lib.rs  quot.rs
cex-core/: Cargo.toml
cex-core/src/: lib.rs  structure.rs  writer.rs
player/: Cargo.toml
player/src/: main.rs
strategies/: Cargo.toml
strategies/examples/: multi_time_frame_macd_runner.rs
strategies/src/: bandtastic.rs  lib.rs  multi_time_frame_macd.rs
