[package]
name = "binance"
version = "0.1.0"
edition = "2021"

[dependencies]
cex-core = { path = "../cex-core" }
futures-util = "0.3.28"
tokio = { version = "1.0", features = ["full"] }
tokio-tungstenite = { version = "0.20.1", features = ["native-tls"] }
url = "2.4.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
tokio-socks = "0.5"
reqwest = { version = "0.11", features = ["json"] }
zstd = "0.13"
anyhow = "1.0"
clap = { version = "4.4.6", features = ["derive"] }
shared_memory = "0.12"
async-trait = "0.1"
crossbeam = "0.8.4"
toml = "0.8.22"
ta = "0.5.0"
