[package]
name = "cex-core"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
async-trait = "0.1"
tokio = { version = "1.0", features = ["full"] } 
chrono = "0.4.41"
zstd = "0.13"
shared_memory = "0.12"
tracing = "0.1"
anyhow = "1.0"
